--- a/webapp/src/components/SideSlider/style.css
+++ b/webapp/src/components/SideSlider/style.css
@@ -5,36 +5,37 @@
   text-transform: uppercase;
 }
 
+
 h2 {
-  margin-bottom: 10px;
-  color:rgb(10, 10, 10);
-  padding:10px;
+ 
+  color:rgb(83, 82, 82);
+  
   cursor: pointer;
   
 }
 
+.logo {
+  height: 50px;
+  width: 50px;
+
+}
 .nav-btn {
-  display:none;
+  
   border: none;
   background-color: transparent;
-  color:white;
+  color:rgb(255, 255, 255);
   cursor: pointer;
   font-size: 20px;
   z-index: 1;
 
 }
 
-@media (max-width: 900px) {
-  .nav-btn {
-   display:flex;
-  }
-}
+
 
 .open-btn {
   position: absolute;
   margin:5px;
-  top: 13px;
-  left: 10px;
+  
   z-index: 1;
 }
 
@@ -50,7 +51,7 @@ h2 {
 
 .nav.visible {
   transform: translateX(0);
-  z-index: 1;
+ 
 }
 
 .nav-black {
@@ -59,24 +60,24 @@ h2 {
   max-width: 480px;
   min-width: 320px;
   transition-delay: 0.4s;
-  z-index: 1;
+  z-index: 999;
 }
 
 .nav-black.visible {
   transition-delay: 0s;
-  z-index: 1;
+ 
 }
 
 .nav-red {
   background-color: rgb(229, 9, 20);
   width: 95%;
   transition-delay: 0.2s;
-  z-index: 1;
+  z-index: 999;
 }
 
 .nav-red.visible {
   transition-delay: 0.2s;
-  z-index: 1;
+  
 }
 
 .nav-white {
@@ -85,12 +86,12 @@ h2 {
   padding: 40px;
   position: relative;
   transition-delay: 0s;
-  z-index: 1;
+  z-index: 999;
 }
 
 .nav-white.visible {
   transition-delay: 0.4s;
-  z-index: 1;
+  
 }
 
 .close-btn {
@@ -105,11 +106,12 @@ h2 {
 .list {
   list-style-type: none;
   padding: 0;
-  z-index: 1;
+  
 }
 
 .list li {
-  margin: 20px 0;
+  margin: 10px 0;
+
 }
 
 .list li a {
